--- a/requirements.txt
+++ b/requirements.txt
@@ -127,8 +127,8 @@ threadpoolctl==3.5.0
 tokenizers==0.19.1
 toml==0.10.2
 tomlkit==0.12.0
-torch==2.1.0
-torchaudio==2.0.0
+torch>=2.1.0
+torchaudio>=2.0.0
 torchdata==0.7.0
 torchmetrics==1.4.1
 torchtext==0.16.0
