--- a/requirements.txt
+++ b/requirements.txt
@@ -90,7 +90,7 @@ pydeck==0.9.1
 pydub==0.25.1
 Pygments==2.18.0
 pyparsing==3.1.4
-python-dateutil==2.9.0.post0
+python-dateutil>=2.9.0.post0
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.2
@@ -129,10 +129,10 @@ toml==0.10.2
 tomlkit==0.12.0
 torch>=2.1.0
 torchaudio>=2.0.0
-torchdata==0.7.0
-torchmetrics==1.4.1
-torchtext==0.16.0
-torchvision==0.16.0
+torchdata>=0.7.0
+torchmetrics>=1.4.1
+torchtext>=0.16.0
+torchvision>=0.16.0
 tornado==6.4.1
 tqdm==4.66.5
 transformers==4.44.2
